# rift-cairo-sandbox

./: .gitignore  .pylintrc  Makefile  README.md  notes.md  pyproject.toml
artifacts/abis/: things.json
contracts/: things.cairo
interface/: index.html  package.json  pnpm-lock.yaml
interface/src/: App.css  App.tsx
interface/src/abis/: things.json
interface/src/components/: Account.tsx  ConnectWallet.tsx  FightThings.tsx  MintThing.tsx  MyThing.tsx  Transactions.tsx
interface/src/contexts/: things-address.tsx
interface/src/hooks/: useLocalStorage.ts  useLocalThings.ts  useMyThing.ts  useStarknetCall.ts  useStarknetInvoke.ts  useThingsCall.ts  useThingsContract.ts  useThingsFight.ts  useThingsMethod.ts  useThingsMint.ts
scripts/: deploy_things.py
tests/: conftest.py  signers.py  test_things.py  utils.py
