[tool.poetry]
name = "cairo"
version = "0.1.0"
description = ""
authors = ["Kevin Halliday <halliday.kevin7@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
cairo-nile = "0.6.1"
openzeppelin-cairo-contracts = "^0.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
