[tool.poetry]
name = "rift-cairo-sandbox"
version = "0.0.0"
description = "sandbox for cairo learnings"
authors = ["Michael Rodriguez <mike@recursivelabs.org>"]
license = "GNU General Public License, v3.0 or greater"

[tool.poetry.dependencies]
python = "^3.8"
openzeppelin-cairo-contracts = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
